# db-hhvacancies-cw5

./: .gitignore  README.md  pyproject.toml
src/: config_db.py  config_hh.py  database.ini  db_manager_class.py  main.py  queries.sql  utils.py
