[tool.poetry]
name = "db-hhvacancies-cw5"
version = "0.1.0"
description = ""
authors = ["pozdniakova olga <caramelca07@mail.ru>"]
readme = "README.md"
packages = [{include = "db_hhvacancies_cw5"}]

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.5.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
